src/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 0 1rem 2rem;
  text-align: center;
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-height: 100vh;
}

.items {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: center;
  margin: auto;
}

.item {
  display: flex;
  flex-flow: column nowrap;
  text-transform: uppercase;
}

.item span:not(:first-of-type) {
  color: #666;
}

.language-choice {
  text-transform: capitalize;
}

.allergy-choice {
  text-transform: capitalize;
}

.item > img {
  height: 100px;
  width: 100px;
  object-fit: contain;
  mix-blend-mode: difference;
}

.allergy-choice img {
  height: 20px;
  width: 20px;
  vertical-align: middle;
  object-fit: contain;
  mix-blend-mode: difference;
}

.qr-code {
  display: inline-block;
  background-color: #fff;
  padding: 16px;
  border-radius: 16px;
  max-width: 100%;
}

.dimmed-text {
  color: #666;
}

